--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,13 @@ main {
 	padding: 10px 20px;
 	color: aliceblue;
 }
+
+small {
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+}
+
+img {
+	height: 150px;
+}
