--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
-* {
+html {
 	box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
 	margin: 0;
 	padding: 0;
 	font-family: "Poppins", sans-serif;
@@ -81,5 +87,14 @@ small {
 }
 
 img {
+	position: relative;
+	left: 50px;
+	margin-left: -50px;
 	height: 150px;
+	transition: all 0.4s ease 0s;
+	box-shadow: 0px 4px 4px 2px rgba(20, 20, 20, 0.3);
+}
+
+img:hover {
+	height: 152px;
 }
