--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,24 @@ header {
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.8);
 }
 
+.mensaje {
+	width: 60%;
+	height: 480px;
+	background-color: #363636;
+	position: fixed;
+	display: block;
+	border-radius: 12px;
+	color: aliceblue;
+	padding: 10%;
+	border: 1px solid aliceblue;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.8);
+}
+
+.mensaje h2,
+#mensajeb {
+	margin: 12px;
+}
+
 .menu {
 	width: 100vw;
 	height: 20vh;
@@ -64,6 +82,7 @@ main {
 	align-items: center;
 	background-color: #363636;
 	height: 80vh;
+	transition: all 0.3s ease 0s;
 }
 
 .table {
